cargo-features = ["workspace-inheritance"]

[package]
name = "deposit"
version = "0.1.0"
rust-version = "1.59"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deposit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang     = {workspace = true, features = ["init-if-needed"]}
anchor-spl      = {workspace = true, features = ["token", "metadata", "dex"]}
solana-program  = {workspace = true}
mpl-token-metadata = { version = "1.4.3", features = ["no-entrypoint"] }